fix(main.css): stretched image

--- a/main.css
+++ b/main.css
@@ -410,9 +410,9 @@ img{
     margin: 0 auto;
 }
 .customer img{
-    width: 170px;
-    height: 170px;
-    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    border-radius: 40%;
     margin: 25px auto;
 }
 .customer span{
